--- a/css/base.css
+++ b/css/base.css
@@ -2,3 +2,64 @@ body {
   background-color: black;
   color: white;
 }
+
+header {
+  width: 100%;
+  text-align: center;
+  font-size: 2em;
+  border-bottom: 1px grey solid;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+  font-size: 1.2em;
+  border-top: 1px grey solid;
+}
+
+div#popup-overlay {
+  display: grid;
+  grid-template: auto auto auto / auto auto auto auto auto;
+  grid-template-areas:  'name name name img img'
+                        'cur cur cur img img'
+                        'hist hist hist hist hist';
+  gap: 0;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 40%;
+  height: 40%;
+
+  border: 3px white double;
+}
+
+div#popup-overlay h1 {
+  font-size: 2em;
+  text-align: center;
+  margin: auto;
+}
+
+div#popup-overlay img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+div#popup-overlay div * {
+  text-align: center;
+  margin: auto;
+}
+
+div#historical-item-price-div {
+  overflow: auto;
+}
+
+div#historical-item-price-div div {
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
+  width: 100%;
+  height: auto;
+}
